--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <meta name="referrer" content="no-referrer">
       <script type="text/javascript" src="live2dw/lib/L2Dwidget.min.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>前端小窝</title>
