--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       <meta name="referrer" content="no-referrer">
       <script type="text/javascript" src="live2dw/lib/L2Dwidget.min.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>前端小窝</title>
+    <title>友人的Blog</title>
   </head>
   <body>
 <!--
